--- a/index.html
+++ b/index.html
@@ -116,12 +116,13 @@
             text-align: center;
             border: 2px dashed var(--ribbon-pink);
         }
-        .addon-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(180px, 1fr)); gap: 15px; margin-top: 20px; }
-        .addon-item { font-size: 0.85rem; color: var(--slate); background: white; padding: 14px 16px; border-radius: 12px; border: 1px solid #f0f0f0; display: flex; justify-content: space-between; align-items: center; gap: 12px; flex-wrap: wrap; cursor: pointer; transition: border-color 0.2s, box-shadow 0.2s; }
-        .addon-item:hover { border-color: var(--gold); box-shadow: 0 4px 12px rgba(197,164,126,0.2); }
-        .addon-item .addon-name { flex: 1; min-width: 0; }
-        .addon-item .addon-price { color: var(--gold); font-weight: 600; }
-        .addon-item .addon-btn { background: var(--slate); color: white; border: none; padding: 8px 14px; border-radius: 8px; font-size: 0.7rem; font-weight: 600; cursor: pointer; font-family: inherit; text-transform: uppercase; }
+        .addon-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(260px, 1fr)); gap: 16px; margin-top: 20px; }
+        .addon-item { font-size: 0.9rem; color: var(--slate); background: white; padding: 18px; border-radius: 14px; border: 1px solid #f0f0f0; display: flex; flex-direction: column; gap: 12px; transition: border-color 0.2s, box-shadow 0.2s; }
+        .addon-item:hover { border-color: var(--gold); box-shadow: 0 4px 16px rgba(197,164,126,0.15); }
+        .addon-item .addon-name { font-weight: 600; line-height: 1.3; }
+        .addon-item .addon-row { display: flex; align-items: center; justify-content: space-between; gap: 12px; margin-top: 4px; }
+        .addon-item .addon-price { color: var(--gold); font-weight: 700; font-size: 1rem; flex-shrink: 0; }
+        .addon-item .addon-btn { background: var(--slate); color: white; border: none; padding: 10px 18px; border-radius: 10px; font-size: 0.75rem; font-weight: 600; cursor: pointer; font-family: inherit; text-transform: uppercase; flex-shrink: 0; }
         .addon-item .addon-btn:hover { background: #3d4745; }
 
         .bottom-section { max-width: 1100px; margin: 60px auto; padding: 0 20px; display: flex; flex-wrap: wrap; gap: 40px; align-items: flex-start; }
@@ -379,34 +380,46 @@
         <p style="font-size: 0.8rem; margin-top: 5px;">Build your perfect emergency kit — add to your case!</p>
         <div class="addon-grid">
             <div class="addon-item" data-addon="Extra Hair Ties (3pk)" data-price="2">
-                <span class="addon-name">Extra Hair Ties (3pk)</span>
-                <span class="addon-price">$2</span>
-                <button type="button" class="addon-btn add-addon">+ Add</button>
+                <div class="addon-name">Extra Hair Ties (3pk)</div>
+                <div class="addon-row">
+                    <span class="addon-price">$2</span>
+                    <button type="button" class="addon-btn add-addon">+ Add</button>
+                </div>
             </div>
             <div class="addon-item" data-addon="Premium Body Wipes" data-price="3">
-                <span class="addon-name">Premium Body Wipes</span>
-                <span class="addon-price">$3</span>
-                <button type="button" class="addon-btn add-addon">+ Add</button>
+                <div class="addon-name">Premium Body Wipes</div>
+                <div class="addon-row">
+                    <span class="addon-price">$3</span>
+                    <button type="button" class="addon-btn add-addon">+ Add</button>
+                </div>
             </div>
             <div class="addon-item" data-addon="Luxury Hand Cream" data-price="3">
-                <span class="addon-name">Luxury Hand Cream</span>
-                <span class="addon-price">$3</span>
-                <button type="button" class="addon-btn add-addon">+ Add</button>
+                <div class="addon-name">Luxury Hand Cream</div>
+                <div class="addon-row">
+                    <span class="addon-price">$3</span>
+                    <button type="button" class="addon-btn add-addon">+ Add</button>
+                </div>
             </div>
             <div class="addon-item" data-addon="Car Refreshing Spray" data-price="2">
-                <span class="addon-name">Car Refreshing Spray</span>
-                <span class="addon-price">$2</span>
-                <button type="button" class="addon-btn add-addon">+ Add</button>
+                <div class="addon-name">Car Refreshing Spray</div>
+                <div class="addon-row">
+                    <span class="addon-price">$2</span>
+                    <button type="button" class="addon-btn add-addon">+ Add</button>
+                </div>
             </div>
             <div class="addon-item" data-addon="Compact Lint Roller" data-price="1">
-                <span class="addon-name">Compact Lint Roller</span>
-                <span class="addon-price">$1</span>
-                <button type="button" class="addon-btn add-addon">+ Add</button>
+                <div class="addon-name">Compact Lint Roller</div>
+                <div class="addon-row">
+                    <span class="addon-price">$1</span>
+                    <button type="button" class="addon-btn add-addon">+ Add</button>
+                </div>
             </div>
             <div class="addon-item" data-addon="Extra Pads/Tampons" data-price="2">
-                <span class="addon-name">Extra Pads/Tampons</span>
-                <span class="addon-price">$2</span>
-                <button type="button" class="addon-btn add-addon">+ Add</button>
+                <div class="addon-name">Extra Pads/Tampons</div>
+                <div class="addon-row">
+                    <span class="addon-price">$2</span>
+                    <button type="button" class="addon-btn add-addon">+ Add</button>
+                </div>
             </div>
         </div>
     </div>
