--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MaKe Case | Official Site</title>
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&family=Playfair+Display:ital,wght@0,700;1,400&display=swap" rel="stylesheet">
     <style>
         :root {
@@ -18,8 +19,12 @@
         body {
             margin: 0;
             font-family: 'Montserrat', sans-serif;
-            background-color: var(--cream);
-            background-image: radial-gradient(at 0% 0%, rgba(172, 193, 180, 0.2) 0px, transparent 50%), radial-gradient(at 100% 100%, rgba(244, 218, 218, 0.2) 0px, transparent 50%);
+            background-color: #f9f6f1;
+            background-image: 
+                radial-gradient(ellipse 90% 60% at 10% 0%, rgba(244, 218, 218, 0.5) 0%, transparent 55%),
+                radial-gradient(ellipse 70% 50% at 95% 100%, rgba(172, 193, 180, 0.4) 0%, transparent 55%),
+                radial-gradient(ellipse 60% 50% at 50% 60%, rgba(197, 164, 126, 0.15) 0%, transparent 65%),
+                radial-gradient(circle at 80% 20%, rgba(255, 255, 255, 0.6) 0%, transparent 25%);
             background-attachment: fixed;
             color: var(--slate);
             padding-bottom: 60px;
@@ -315,11 +320,11 @@
             <details>
                 <summary>Explore the Kit</summary>
                 <div class="gallery-wrapper">
-                    <div class="gallery-item"><img src="https://images.unsplash.com/photo-1522338242992-e1a54906a8da?w=500" alt="Small case contents"></div>
-                    <div class="gallery-item"><img src="https://images.unsplash.com/photo-1590439471364-192aa70c0b53?w=500" alt="Small case styling"></div>
-                    <div class="gallery-item"><img src="https://images.unsplash.com/photo-1512496015851-a90fb38ba796?w=500" alt="Small case essentials"></div>
-                    <div class="gallery-item"><img src="https://images.unsplash.com/photo-1583947581924-860bda6a26df?w=500" alt="Small case items"></div>
-                    <div class="gallery-item"><img src="https://images.unsplash.com/photo-1595425959632-34f2822322ce?w=500" alt="Small case kit"></div>
+                    <div class="gallery-item"><img src="https://images.unsplash.com/photo-1596462502278-27bfac44221b?w=800&q=85" alt="Compact travel kit with essentials" loading="lazy"></div>
+                    <div class="gallery-item"><img src="https://images.unsplash.com/photo-1522338242992-e1a54906a8da?w=800&q=85" alt="Organized toiletry bag" loading="lazy"></div>
+                    <div class="gallery-item"><img src="https://images.unsplash.com/photo-1590439471364-192aa70c0b53?w=800&q=85" alt="Beauty essentials flat lay" loading="lazy"></div>
+                    <div class="gallery-item"><img src="https://images.unsplash.com/photo-1584622650111-993a426fbf0a?w=800&q=85" alt="Personal care items" loading="lazy"></div>
+                    <div class="gallery-item"><img src="https://images.unsplash.com/photo-1595425959632-34f2822322ce?w=800&q=85" alt="Road trip ready kit" loading="lazy"></div>
                 </div>
                 <div class="details-content">
                     ✦ 3 Hair ties | 1 Pad & 1 Tampon<br>
@@ -337,11 +342,11 @@
             <details>
                 <summary>Explore the Kit</summary>
                 <div class="gallery-wrapper">
-                    <div class="gallery-item"><img src="https://images.unsplash.com/photo-1556229010-6c3f2c9ca5f8?w=500" alt="Medium case contents"></div>
-                    <div class="gallery-item"><img src="https://images.unsplash.com/photo-1608611305410-639097e84992?w=500" alt="Medium case styling"></div>
-                    <div class="gallery-item"><img src="https://images.unsplash.com/photo-1526170315870-efcd0a73e28b?w=500" alt="Medium case essentials"></div>
-                    <div class="gallery-item"><img src="https://images.unsplash.com/photo-1616150638538-ffb0679a3fc4?w=500" alt="Medium case items"></div>
-                    <div class="gallery-item"><img src="https://images.unsplash.com/photo-1570172619644-dfd03ed5d881?w=500" alt="Medium case kit"></div>
+                    <div class="gallery-item"><img src="https://images.unsplash.com/photo-1523944339743-0fe06f079939?w=800&q=85" alt="Medium organizer with more items" loading="lazy"></div>
+                    <div class="gallery-item"><img src="https://images.unsplash.com/photo-1608611305410-639097e84992?w=800&q=85" alt="Car essentials and sprays" loading="lazy"></div>
+                    <div class="gallery-item"><img src="https://images.unsplash.com/photo-1526170315870-efcd0a73e28b?w=800&q=85" alt="Skincare and body care" loading="lazy"></div>
+                    <div class="gallery-item"><img src="https://images.unsplash.com/photo-1616150638538-ffb0679a3fc4?w=800&q=85" alt="Lotion and refreshing spray" loading="lazy"></div>
+                    <div class="gallery-item"><img src="https://images.unsplash.com/photo-1570172619644-dfd03ed5d881?w=800&q=85" alt="Complete medium kit" loading="lazy"></div>
                 </div>
                 <div class="details-content">
                     <strong>Everything in Small, plus:</strong><br>
@@ -359,11 +364,11 @@
             <details>
                 <summary>Explore the Kit</summary>
                 <div class="gallery-wrapper">
-                    <div class="gallery-item"><img src="https://images.unsplash.com/photo-1523944339743-0fe06f079939?w=500" alt="Large case contents"></div>
-                    <div class="gallery-item"><img src="https://images.unsplash.com/photo-1596462502278-27bfac44221b?w=500" alt="Large case styling"></div>
-                    <div class="gallery-item"><img src="https://images.unsplash.com/photo-1584622650111-993a426fbf0a?w=500" alt="Large case essentials"></div>
-                    <div class="gallery-item"><img src="https://images.unsplash.com/photo-1583947581924-860bda6a26df?w=500" alt="Large case items"></div>
-                    <div class="gallery-item"><img src="https://images.unsplash.com/photo-1590439471364-192aa70c0b53?w=500" alt="Large case kit"></div>
+                    <div class="gallery-item"><img src="https://images.unsplash.com/photo-1512496015851-a90fb38ba796?w=800&q=85" alt="Full emergency kit contents" loading="lazy"></div>
+                    <div class="gallery-item"><img src="https://images.unsplash.com/photo-1556229010-6c3f2c9ca5f8?w=800&q=85" alt="Ultimate case organizer" loading="lazy"></div>
+                    <div class="gallery-item"><img src="https://images.unsplash.com/photo-1583947581924-860bda6a26df?w=800&q=85" alt="Feminine care and wipes" loading="lazy"></div>
+                    <div class="gallery-item"><img src="https://images.unsplash.com/photo-1522338242992-e1a54906a8da?w=800&q=85" alt="Everything you need on the road" loading="lazy"></div>
+                    <div class="gallery-item"><img src="https://images.unsplash.com/photo-1596462502278-27bfac44221b?w=800&q=85" alt="Large case complete set" loading="lazy"></div>
                 </div>
                 <div class="details-content">
                     <strong>The Ultimate Set:</strong><br>
